--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         </section>
 
         <section id="contactinfo">
-                <h2 id="heading2">Contact</h2>
+                <h2>Contact</h2>
 
                 <form>
                         <label for="fname"><p>Name</p></label>
@@ -40,7 +40,7 @@
                 <textarea></textarea>
             </form>
             <button>Submit</button>
-                                    
+                                                
         </section>
             <footer>
 
