--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a id=contact href="contact.html"> Contact </a>
             </nav> 
         </header>
-
+<!-- This section is just for the background banner -->
         <section id="empty">
 
         </section>
@@ -29,12 +29,14 @@
 
     <img src="assets/images/Kenneth.PNG" alt="profile">
 
-    <p> Hi, I'm Kenneth Bitzer. I grew up in Northern Wisconsin on the shores of Lake Superior. I lived in there for 18 years of my life. I moved to Duluth Minnesota and started working at the 'Whole Foods Co-Op'.  In 2011 I started school at the University of Duluth Minnesota.</p>
+    <p id="internet"><br><br><br> Hello, I'm Kenneth Bitzer. I grew up in Northern Wisconsin on the shores of Lake Superior. I lived in there for 18 years of my life. I moved to Duluth Minnesota and started working at the 'Whole Foods Co-Op'.  In 2011 I started school at the University of Duluth Minnesota.  I began my studies studying geological sciences. </p>
 
-    <p>  I graduated in 2015 with a BS in geology, I continued working in Duluth as a manager on duty for the 'Whole Foods Co-Op'.  I then deceded to move to Minneapolis Minnesota in the fall of 2016 and started looking for a job more inline with my major. Agust of 2016 I took a job as a field chemist.</p> 
+    <p>I graduated in 2015 with a BS in geology, I continued working in Duluth as a manager on duty for the 'Whole Foods Co-Op'.    I then decided to move to Minneapolis Minnesota in the fall of 2016 and started looking for a job more inline with my major. August of 2016 I took a job as a field chemist.</p>
     
-    <p>I have worked as a field chemist for the past 2 years.  I am currently seeking an education and a job in web development.</p>
+    <p>I have worked as a field chemist for the past 2 years.  I am currently seeking an education and a job in web development. I enjoy talking about anything geology or astronomy related.  I'm also kind of a gamer nerd.  I built my own PC and play a lot of video games when I have the time.</p>
 
+ 
+    
     </section>
    
     <footer>
