--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
     <html lang="en-us">
     <head>
         <meta charset="UTF-8">
@@ -30,7 +30,7 @@
                         <label for="fname"><p>Name</p></label>
                         <input type="text" id="fname" name="fname">
                         
-                      </form>
+                </form>
                 <form>
                         <label for="email"><p>Email</p></label>
                         <input type="text" id="email" name="email">
