--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                 <a id=contact href="contact.html"> Contact </a>
             </nav> 
         </header>
-
+ <!-- added for white background behind "about me,profile,contact" -->
         <section id="empty">
 
         </section>
@@ -37,6 +37,8 @@
                 </form>
                 <form>
                     <p>Message</p>
+
+                <!-- text area for the message box -->
                 <textarea></textarea>
             </form>
             <button>Submit</button>
