--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a id=contact href="contact.html"> Contact </a>
             </nav> 
         </header>
-<!-- This section is just for the background banner -->
+ <!-- added for white background behind "about me,profile,contact" -->
         <section id="empty">
 
         </section>
