--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                 <a id=contact href="contact.html"> Contact </a>
             </nav> 
         </header>
-
+        <!-- added for white background behind "about me,profile,contact" -->
         <section id="empty">
 
         </section>
